--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/index.js", "pages/_app.jsx", "pages/_app.js", "components/layout/Sidebar.jsx"],
   "exclude": ["node_modules"]
 }
